# t_gui_cpp

./: CMakeLists.txt  README.md  build.bat  run.bat
plugins/example_plugin/: CMakeLists.txt  ExamplePlugin.h  plugin.json
src/: main.cpp
src/core/: Application.cpp  Application.h  EventSystem.cpp  EventSystem.h  LayerManager.cpp  LayerManager.h  MainWindow.cpp  MainWindow.h  SimpleLayer.cpp  SimpleLayer.h
src/plugins/: BasePlugin.cpp  BasePlugin.h  PluginInterface.h  PluginManager.cpp  PluginManager.h
src/ui/: LayerWidget.cpp  LayerWidget.h  ToolBar.cpp  ToolBar.h  ViewerWidget.cpp  ViewerWidget.h
src/utils/: Config.cpp  Config.h  Logger.cpp  Logger.h
